--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.7",
+    "axios": "^0.18.0",
+    "immutability-helper": "^2.8.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0"
   },
