--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.10.7",
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "immutability-helper": "^2.8.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
