--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "chart.js": "^2.7.3",
+    "chartjs-plugin-colorschemes": "^0.2.0",
     "chartjs-plugin-labels": "^1.1.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
