--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
@@ -54,12 +55,14 @@
     "react-player": "^1.7.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
